Added more about recognizing stages and FST

--- a/5YCM/bibliography.bib
+++ b/5YCM/bibliography.bib
@@ -1,10 +1,17 @@
 @article{Costea,
-abstract = {We present metaSNV, a tool for single nucleotide variant (SNV) analysis in metagenomic samples, capable of comparing populations of thousands of bacterial and archaeal species. The tool uses as input nucleotide sequence alignments to reference genomes in standard SAM/BAM format, performs SNV calling for individual samples and across the whole data set, and generates various statistics for individual species including allele frequencies and nucleotide diversity per sample as well as distances and fixation indices across samples. Using published data from 676 metagenomic samples of different sites in the oral cavity, we show that the results of metaSNV are comparable to those of MIDAS, an alternative imple-mentation for metagenomic SNV analysis, while data processing is faster and has a smaller storage footprint. Moreover, we implement a set of distance measures that allow the com-parison of genomic variation across metagenomic samples and delineate sample-specific variants to enable the tracking of specific strain populations over time. The implementation of metaSNV is available at:},
-author = {Costea, Paul Igor and {Munch 1☯}, Robin and Coelho, Luis Pedro and Paoli, Lucas and Sunagawa, Shinichi and Bork, Peer},
+abstract = {We present metaSNV, a tool for single nucleotide variant (SNV) analysis in metagenomic samples, capable of comparing populations of thousands of bacterial and archaeal species. The tool uses as input nucleotide sequence alignments to reference genomes in standard SAM/BAM format, performs SNV calling for individual samples and across the whole data set, and generates various statistics for individual species including allele frequencies and nucleotide diversity per sample as well as distances and fixation indices across samples. Using published data from 676 metagenomic samples of different sites in the oral cavity, we show that the results of metaSNV are comparable to those of MIDAS, an alternative implementation for metagenomic SNV analysis, while data processing is faster and has a smaller storage footprint. Moreover, we implement a set of distance measures that allow the comparison of genomic variation across metagenomic samples and delineate sample-specific variants to enable the tracking of specific strain populations over time. The implementation of metaSNV is available at: http://metasnv.embl.de/.},
+author = {Costea, Paul Igor and Munch, Robin and Coelho, Luis Pedro and Paoli, Lucas and Sunagawa, Shinichi and Bork, Peer},
 doi = {10.1371/journal.pone.0182392},
 file = {:Users/sstevens/Library/Application Support/Mendeley Desktop/Downloaded/Costea et al. - Unknown - metaSNV A tool for metagenomic strain level analysis.pdf:pdf},
+isbn = {1111111111},
+issn = {19326203},
+journal = {PLoS ONE},
+number = {7},
+pmid = {28753663},
 title = {{metaSNV: A tool for metagenomic strain level analysis}},
-url = {http://metasnv.embl.de/.}
+url = {http://metasnv.embl.de/.},
+volume = {12},
+year = {2017}
 }
 @article{Quince2017,
 abstract = {We introduce DESMAN for De novo Extraction of Strains from Metagenomes. Large multi-sample metagenomes are being generated but strain variation results in fragmentary co-assemblies. Current algorithms can bin contigs into metagenome-assembled genomes but are unable to resolve strain-level variation. DESMAN identifies variants in core genes and uses co-occurrence across samples to link variants into haplotypes and abundance profiles. These are then searched for against non-core genes to determine the accessory genome of each strain. We validated DESMAN on a complex 50-species 210-genome 96-sample synthetic mock data set and then applied it to the Tara Oceans microbiome.},
@@ -71,4 +78,33 @@ journal = {ISMEJ},
 title = {{Genome-wide selective sweeps and gene-specific sweeps in natural bacterial populations}},
 year = {2016}
 }
+@article{Schloissnig2012,
+author = {Schloissnig, Siegfried and Arumugam, Manimozhiyan and Sunagawa, Shinichi and Mitreva, Makedonka and Tap, Julien and Zhu, Ana and Waller, Alison and Mende, Daniel R. and Kultima, Jens Roat and Martin, John and Kota, Karthik and Sunyaev, Shamil R. and Weinstock, George M. and Bork, Peer},
+doi = {10.1038/nature11711},
+issn = {0028-0836},
+journal = {Nature},
+month = {dec},
+number = {7430},
+pages = {45--50},
+publisher = {Nature Research},
+title = {{Genomic variation landscape of the human gut microbiome}},
+url = {http://www.nature.com/doifinder/10.1038/nature11711},
+volume = {493},
+year = {2012}
+}
+@article{Schloissnig2012,
+author = {Schloissnig, Siegfried and Arumugam, Manimozhiyan and Sunagawa, Shinichi and Mitreva, Makedonka and Tap, Julien and Zhu, Ana and Waller, Alison and Mende, Daniel R. and Kultima, Jens Roat and Martin, John and Kota, Karthik and Sunyaev, Shamil R. and Weinstock, George M. and Bork, Peer},
+doi = {10.1038/nature11711},
+issn = {0028-0836},
+journal = {Nature},
+month = {dec},
+number = {7430},
+pages = {45--50},
+publisher = {Nature Research},
+title = {{Genomic variation landscape of the human gut microbiome}},
+url = {http://www.nature.com/doifinder/10.1038/nature11711},
+volume = {493},
+year = {2012}
+}
+
 
